Fix z-index issue

--- a/resources/skin.less
+++ b/resources/skin.less
@@ -76,7 +76,7 @@ a {
   flex-wrap: wrap;
   align-items: center;
   position: relative;
-  z-index: 3;
+  z-index: 10;
   justify-content: flex-end;
 }
 
@@ -203,7 +203,7 @@ a {
 }
 
 .mw-echo-ui-overlay {
-  z-index: 3 !important;
+  z-index: 11 !important;
 }
 
 .mw-portlet-personal {
@@ -244,7 +244,7 @@ a {
   width: 30%;
   bottom: 0;
   background: @background-color-toggle-list;
-  z-index: 10;
+  z-index: 13;
   height: 100%;
   overflow-y: auto;
   min-width: max-content;
@@ -704,7 +704,7 @@ body > footer {
   opacity: 0;
   bottom: 0;
   background: @mask-background;
-  z-index: 9;
+  z-index: 12;
   visibility: hidden;
   transition: 0.3s cubic-bezier( 0.25, 0.8, 0.5, 1 ) 1ms;
 }
